--- a/Gamified Habit Tracker Blazor/Components/Pages/Home.razor
+++ b/Gamified Habit Tracker Blazor/Components/Pages/Home.razor
@@ -1,10 +1,27 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<div class="video-background">
+	<video controls width="1920" height="1080" autoplay loop muted playsinline id="bgVideo">
+		<source src="Assests/LoginBG.mp4" type=video/mp4 />
+	</video>
+	<div class="form-container">
+		<h3>Enter your Name & Password</h3>
+		<div class="login">
+			
+			<input type="text" id="name" placeholder="Username"/>
+			
+			<input type="password" id="pwd" placeholder="Password" />
 
-<div>
-	<h1>Enter your Name & Password</h1>
+			<button type="submit" >Login</button>
+		</div>
+
+	</div>
 </div>
 
+@code{
+	private readonly string? password ; 
+
+}
 
 
