--- a/Gamified Habit Tracker Blazor/Components/_Imports.razor
+++ b/Gamified Habit Tracker Blazor/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using Gamified_Habit_Tracker_Blazor
 @using Gamified_Habit_Tracker_Blazor.Client
 @using Gamified_Habit_Tracker_Blazor.Components
+@using Gamified_Habit_Tracker_Blazor.Client.Pages
