--- a/Gamified Habit Tracker Blazor/Components/Pages/Home.razor.css
+++ b/Gamified Habit Tracker Blazor/Components/Pages/Home.razor.css
@@ -1,79 +1,16 @@
 ﻿
 
-.video-background {
-    position : relative;
+.img-background {
+    background-image: url("Assests/bg.png"); /* Path to your image */
+    background-size: cover; /* Ensures the image covers the entire screen */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents tiling */
+    position: fixed; /* Keeps the image fixed during scrolling */
     width: 100%;
-    height: 80vh; 
+    height: 101vh;
     overflow: hidden;
-}
-
-.video-background video {
-    position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1; 
-    transform: translate(-50%, -50%); 
-}
-.form-container {
-    font-family: 'Poppins';
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 40%;
-    color: white;
-    padding: 3%;
-    padding-bottom : 20px;
-    border: 1px solid black;
-    box-shadow: -2px 2px 10px rgb(0, 0, 0);
-    border-radius: 7px;
-    background: linear-gradient(90deg, rgb(19, 0, 60, 0.25),rgb(195, 0, 233, 0.25));
-    margin: 0px auto;
-    margin-top: 10%;
-}
-.login {
-    display: flex;
-    flex-direction: column;
-    width : 70%;
-    
-    padding: 10px;
-}
-.login input{
-    color : white;
-    padding :10px;
-    margin : 10px 0px;
-    border : none;
-    border-bottom : 1px solid white;
-    background: none;
-    
-}
-.login input:focus {
-    background : rgb(255, 255, 255, 0.20);
-    border : none;
-    border-bottom : 1px solid white;
-    outline: none;
-}
-.login input::placeholder{
-    color : white;
-}
-.login button{
-    background : rgb(255, 255, 255, 0.70);
-    text-align : center;
-    border-radius : 10px;
-    width : 100%;
-    padding : 10px;
-    margin : 20px auto;
-    outline : none;
-    box-shadow : none ;
-    border-style: solid;
-    border-color : black;
-    transition : background ease 0.3s ;
-}
-.login button:hover{
-    background : rgb(255, 255, 255, 0.90);
-}
-.login h6 {
-    text-align : center;
-    margin : 0px;
+    z-index: -1;
+    transform: translate(-50%, -50%);
 }
