added dropdown menu component

--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
@@ -5,6 +5,8 @@
 
 <h3>Habits</h3>
 
+<HabitDropdown Title="Daily Habits  ▼" Habits="habits"></HabitDropdown>
+
 <table class="table">
 	<thead>
 		<tr>
