--- a/Gamified Habit Tracker Blazor/Components/Pages/Home.razor.css
+++ b/Gamified Habit Tracker Blazor/Components/Pages/Home.razor.css
@@ -1,7 +1,7 @@
 ﻿
 
 .img-background {
-    background-image: url("Assests/bg.png"); /* Path to your image */
+    background-image: url("Assets/bg.png"); /* Path to your image */
     background-size: cover; /* Ensures the image covers the entire screen */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents tiling */
