--- a/Gamified Habit Tracker Blazor.Client/Pages/HabitDropdown.razor.css
+++ b/Gamified Habit Tracker Blazor.Client/Pages/HabitDropdown.razor.css
@@ -14,8 +14,8 @@
 	display: block;
 	width: 100%;
 	padding: 10px;
-	background: linear-gradient(90deg, rgb(22, 14, 39, 0.25),rgb(195, 0, 233, 0.25));
-	border : none ;
+	background: linear-gradient(90deg,rgb(155, 126, 189,0.5),rgb(212, 190, 228,0.5));
+	border: none;
 	border-bottom: 1px solid white;
 	text-align: left;
 	cursor: pointer;
@@ -24,15 +24,15 @@
 
 .dropdown-content {
 	max-height: 0;
-	overflow: hidden;
-	background: linear-gradient(90deg, rgb(19, 0, 60, 0.25),rgb(195, 0, 233, 0.25));
+	overflow: auto;
+	background: linear-gradient(90deg,rgb(155, 126, 189,0.5),rgb(212, 190, 228,0.5));
 	transition: max-height 0.5s ease;
 	padding-left: 10px;
 	padding-right: 10px;
 }
 
 .dropdown-checkbox:checked ~ .dropdown-content {
-	max-height: 1000px; 
+	max-height: 300px; 
 }
 
 .habit {
@@ -47,19 +47,16 @@
 	white-space: break-spaces;
 	transition: background 0.2s ease;
 }
-.habit-text { 
-	display : flex ;
-	flex-direction :row;
-	align-items : center;
-	justify-content : space-between;
-
+.habit-text {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	gap : 200px;
 }
-.habit-text p {
-	width : 100px;
-	margin : 0px 80px;
-	margin-top : 15px;
-	margin-left : 0px;
-	
+.habit-name{
+	max-width : 100px;
+	max-height : 500px;
 }
 .habit:hover {
 	background: linear-gradient(90deg, rgb(19, 0, 60, 0.3),rgb(195, 0, 233, 0.3)) !important;
@@ -75,11 +72,28 @@
 	gap: 50px;
 	height: 50px;
 }
-	
-.habit-button{
-	width : 100px;
-	border-radius : 10px;
+.complete {
+	background-color: rgb(153, 180, 204);
 }
+.edit {
+	background-color: rgb(160, 140, 100);
+}
+.delete {
+	background-color: rgb(255, 102, 120);
+}
+
+
+.habit-button {
+	width: 100px;
+	border-radius: 10px;
+	height: 50px;
+}
+.add {
+	background-color: rgb(76, 175, 80);
+	margin: auto;
+	width: 500px;
+}
+
 .habit-button p {
 	margin : auto;
 }
