removed habit's freq & unnecassary files/components

--- a/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
@@ -3,6 +3,7 @@
 @inject AchievementService _achievementService
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 
+<PageTitle>Achievements</PageTitle>
 
 <div class="achievement-page">
 	<h1>Achievements</h1>
