--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
@@ -3,6 +3,8 @@
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject NavigationManager nav
 
+<PageTitle>Habits</PageTitle>
+
 <div class="Habits-page">
 	<h1>Habits</h1>
 
