added authentication (there's a bug i can't fix)

--- a/Gamified Habit Tracker Blazor/Components/_Imports.razor
+++ b/Gamified Habit Tracker Blazor/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using Gamified_Habit_Tracker_Blazor.Client
 @using Gamified_Habit_Tracker_Blazor.Components
 @using Gamified_Habit_Tracker_Blazor.Client.Pages
+@using Microsoft.AspNetCore.Components.Authorization
