--- a/Gamified Habit Tracker Blazor.Client/_Imports.razor
+++ b/Gamified Habit Tracker Blazor.Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Gamified_Habit_Tracker_Blazor.Client
 @using Gamified_Habit_Tracker_Blazor.Services
 @using GamifiedHabitTracker.Models
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Components.Authorization
