Fixing Login Handler method not triggering and resolving all warnings

--- a/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
@@ -47,7 +47,7 @@
 	protected async override Task OnInitializedAsync()	
 	{
 		// replace with userid
-		_achievements =  await _achievementService.GetAllAchievement(6);
+		_achievements =  await _achievementService.GetAllAchievement(6) ?? new();
 		await base.OnParametersSetAsync();
 	}
 }
