--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
@@ -27,15 +27,15 @@
 
 	protected override async Task OnInitializedAsync()
 	{
-		_Habits = await _habitService.GetHabits();
-		_CompletedHabits = await _habitService.GetCompletedHabits(6); // replace with userid
-		_NotCompletedHabits = await _habitService.GetNonCompletedHabits(6); // replace with userid
+		_Habits = await _habitService.GetHabits() ?? new();
+		_CompletedHabits = await _habitService.GetCompletedHabits(6) ?? new(); // replace with userid
+		_NotCompletedHabits = await _habitService.GetNonCompletedHabits(6) ?? new(); // replace with userid
 		Streak = await _habitService.CurrentStreak(6); //replace with userid
 	}
 	public async Task RefreshHabits()
 	{
-		_CompletedHabits = await _habitService.GetCompletedHabits(6); // replace with userid
-		_NotCompletedHabits = await _habitService.GetNonCompletedHabits(6); // replace with userid
+		_CompletedHabits = await _habitService.GetCompletedHabits(6) ?? new(); // replace with userid
+		_NotCompletedHabits = await _habitService.GetNonCompletedHabits(6) ?? new(); // replace with userid
 		Streak = await _habitService.CurrentStreak(6); //replace with userid
 	}
 	protected async override Task OnAfterRenderAsync(bool firstRender)
